<?xml version="1.0"?>
<package format="2">
    <name>table_plane_extractor_msgs</name>
    <version>0.1.0</version>
    <description>The table plane extractor msgs package</description>

    <maintainer email="srl@todo.todo">SRL</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>vision_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>vision_msgs</build_export_depend>
    <build_export_depend>shape_msgs</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>vision_msgs</exec_depend>
    <exec_depend>shape_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>